# CrabbyVim

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  flake.nix  init.lua  justfile  lazy-lock.json
doc/: crabbyvim.txt
spell/: en.utf-8.add  en.utf-8.add.spl
src/: autocmds.rs  commands.rs  diagnostic.rs  icons.rs  keymaps.rs  lazy.rs  lib.rs  lsp.rs  macros.rs  options.rs  plugins.rs  status.rs  theme.rs  vim.rs
src/lazy/: gitsigns.rs  types.rs
src/plugins/: conform.rs  delimiters.rs  devicons.rs  fidget.rs  gitsigns.rs  hop.rs  lsp.rs  markview.rs  matchup.rs  mini.rs  oil.rs  snacks.rs  treesitter.rs  undotree.rs
src/plugins/lsp/: blink_cmp.rs
src/plugins/snacks/: dashboard.rs  picker.rs  terminal.rs
src/status/: global_tiles.rs  local_tiles.rs  tiles.rs
src/theme/: blink_cmp.rs  markup.rs  syntax.rs
