[package]
name = "config"
version = "0.1.0"
edition = "2024"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

missing-errors-doc = "allow"
missing-panics-doc = "allow"
enum-glob-use = "allow"
wildcard-imports = "allow"
struct-excessive-bools = "allow"
wildcard_imports = "allow"

[lib]
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "0.11", features = ["luajit", "vendored", "macros"] }
paste = "1.0.15"

  [dependencies.nvim-oxi]
  git = "https://github.com/noib3/nvim-oxi"
  branch = "main"
  default-features = false
  features = ["neovim-0-11", "mlua"]
